<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/background_rect"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="belizenearme.infoservices.lue.belize.SettingsActivity"
    tools:showIn="@layout/activity_settings">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        >


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/aboutUsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:text="@string/about_us"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_vertical"
            android:drawableLeft="@android:drawable/btn_star_big_on"
            android:ellipsize="end" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="50dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/supportText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:text="@string/support"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_vertical"
            android:drawableLeft="@android:drawable/btn_star_big_on"
            android:ellipsize="end" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="50dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/privacyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_vertical"
            android:drawableLeft="@android:drawable/btn_star_big_on"
            android:text="@string/privacy_plicies"
            android:ellipsize="end" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="50dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/termOfUseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_vertical"
            android:drawableLeft="@android:drawable/btn_star_big_on"
            android:text="@string/terms_of_use"
            android:ellipsize="end" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="50dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/leaveFeedbackText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_vertical"
            android:drawableLeft="@android:drawable/btn_star_big_on"
            android:text="@string/leave_feedback"
            android:ellipsize="end" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="50dp"
            />

     <!--   <TextView
            android:id="@+id/notificationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_vertical"
            android:drawableLeft="@android:drawable/btn_star_big_on"
            android:text="@string/notifications"
            android:ellipsize="end" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="50dp"
            />-->

    </LinearLayout>
    </ScrollView>

</RelativeLayout>
